@@ -4,6 +4,9 @@ Unreleased
 - Fixed bug in ``DocumentMap.add`` which left orphan mappings for previous
   addresses when adding an existing docid with a new address.
 
+- Added the ability to sort by text relevance. Use the name of the text
+  index as the ``sort_index`` in the query.
+
 0.6.2 (2009-04-15)
 ==================
 
